--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=Teruel Express Backend
+spring.profiles.active=${APP_PROFILE:test}
+spring.jpa.open-in-view=false
+spring.devtools.restart.enabled=true
