fix(resources): corrigindo nomenclatura das configuracoes dos perfis

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:{DEFINIR}/{DEFINIR}
+spring.datasource.url=jdbc:postgresql://localhost:5432/texpress
 spring.datasource.username=postgres
 spring.datasource.password=1234567
 
