--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/texpress
+spring.datasource.url=jdbc:postgresql://localhost:5432/teruel_express
 spring.datasource.username=postgres
 spring.datasource.password=1234567
 
