--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,9 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+|
 ### VS Code ###
 .vscode/
 /bin/
+
+src/main/resources/application-secrets.properties
