--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -12,4 +12,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Local Front-End
-cors.origins=${CORS_ORIGINS:http://localhost:5173}
+cors.origins=http://localhost:5173,http://localhost:5174
