refactor(controller): corrigido busca por id

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=dlqnts
 spring.datasource.password=pagil
 
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
 # H2 Client
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -10,6 +12,7 @@ spring.h2.console.path=/h2-console
 # Show SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-only
 
 # Local Front-End
 cors.origins=http://localhost:5173,http://localhost:5174
