--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Teruel Express Backend
-spring.profiles.active=${APP_PROFILE:dev}
+spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
 spring.devtools.restart.enabled=true
 spring.config.import=classpath:application-secrets.properties
