merge: feat-cadastro com dev

--- a/src/main/resources/application-secrets-examples.properties
+++ b/src/main/resources/application-secrets-examples.properties
@@ -1,6 +1,10 @@
 DB_URL=
 DB_USERNAME=
 DB_PASSWORD=
+
+MAIL_USERNAME=
+MAIL_PASSWORD=
+
 JWT.EXPIRATION.CLIENT=
 JWT.EXPIRATION.ADMIN=
 JWT.EXPIRATION.DEV=
