--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
 spring.devtools.restart.enabled=true
 spring.config.import=classpath:application-secrets.properties
+
+spring.mail.port=587
+spring.mail.host=smtp.gmail.com
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
