quickfix: corrigindo properties dev e security

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
+DB_URL=jdbc:postgresql://aws-1-sa-east-1.pooler.supabase.com:5432/postgres?user=postgres.ibgildfglqdinbuaqmxr&password=5grandesreunidos
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -13,4 +14,4 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=false
 spring.flyway.clean-disabled=false
 spring.flyway.validate-on-migrate=false
-cors.origins=http://localhost:5173,http://localhost:5174
+cors.origins=https://admin-teruelexpress.vercel.app,https//teruelexpress.vercel.app
