--- a/pom.xml
+++ b/pom.xml
@@ -188,7 +188,7 @@
 					</annotationProcessorPaths>
                     <source>21</source>
                     <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+<!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                 </configuration>
 			</plugin>
 			<plugin>
@@ -197,6 +197,7 @@
 				<configuration>
 					<includes>
 						<include>**/*IT.java</include>
+						<include>**/*Test.java</include>
 					</includes>
 				</configuration>
 			</plugin>
