quickfix(ajustes): correcoes solicitadas pela revisao do copilot

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,4 +14,4 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=false
 spring.flyway.clean-disabled=false
 spring.flyway.validate-on-migrate=false
-cors.origins=https://admin-teruelexpress.vercel.app,https//teruelexpress.vercel.app
+cors.origins=https://admin-teruelexpress.vercel.app,https://teruelexpress.vercel.app
