feat: adicionado tempo de expiracao para codigo

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,13 +1,9 @@
-# H2 Connection
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=dlqnts
-spring.datasource.password=pagil
+# PostgreSQL Connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/delinquentes
+spring.datasource.username=menoni
+spring.datasource.password=4956129
 
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-
-# H2 Client
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
 # Show SQL
 spring.jpa.show-sql=true
